[gd_scene load_steps=48 format=2]

[ext_resource path="res://MeshToLoad/Cube/MeshCube (Y-).glb" type="PackedScene" id=1]
[ext_resource path="res://MeshToLoad/Cube/MeshCube (Y+).glb" type="PackedScene" id=2]
[ext_resource path="res://MeshToLoad/Cube/MeshCube (Z+).glb" type="PackedScene" id=3]
[ext_resource path="res://MeshToLoad/Cube/MeshCube (Z-).glb" type="PackedScene" id=4]
[ext_resource path="res://MeshToLoad/Cube/MeshCube (X-).glb" type="PackedScene" id=5]
[ext_resource path="res://MeshToLoad/Cube/MeshCube (X+).glb" type="PackedScene" id=6]
[ext_resource path="res://main.gd" type="Script" id=7]
[ext_resource path="res://PlayerFreeCam/PlayerFreeCam.tscn" type="PackedScene" id=8]
[ext_resource path="res://Font/MonoBigger.tres" type="DynamicFont" id=9]
[ext_resource path="res://Font/Mono.tres" type="DynamicFont" id=10]
[ext_resource path="res://MeshToLoad/Slab/MeshSlab (Y+).glb" type="PackedScene" id=11]
[ext_resource path="res://MeshToLoad/Slab/MeshSlab (X+).glb" type="PackedScene" id=12]
[ext_resource path="res://MeshToLoad/Slab/MeshSlab (Z-).glb" type="PackedScene" id=13]
[ext_resource path="res://MeshToLoad/Slab/MeshSlab (Y-).glb" type="PackedScene" id=14]
[ext_resource path="res://MeshToLoad/Slab/MeshSlab (Z+).glb" type="PackedScene" id=15]
[ext_resource path="res://MeshToLoad/Slab/MeshSlab (X-).glb" type="PackedScene" id=16]
[ext_resource path="res://MeshToLoad/Wall/MeshWall (Z).glb" type="PackedScene" id=17]
[ext_resource path="res://MeshToLoad/Wall/MeshWall (Y).glb" type="PackedScene" id=18]
[ext_resource path="res://MeshToLoad/Wall/MeshWall (X).glb" type="PackedScene" id=19]
[ext_resource path="res://MeshToLoad/Pole/MeshPole (Z).glb" type="PackedScene" id=20]
[ext_resource path="res://MeshToLoad/Pole/MeshPole (X).glb" type="PackedScene" id=21]
[ext_resource path="res://MeshToLoad/Pole/MeshPole (Y).glb" type="PackedScene" id=22]
[ext_resource path="res://MeshToLoad/Stair/MeshStair (DOWN)(X-).glb" type="PackedScene" id=23]
[ext_resource path="res://MeshToLoad/Stair/MeshStair (UP)(Z+).glb" type="PackedScene" id=24]
[ext_resource path="res://MeshToLoad/Stair/MeshStair (DOWN)(X+).glb" type="PackedScene" id=25]
[ext_resource path="res://MeshToLoad/Stair/MeshStair (UP)(X+).glb" type="PackedScene" id=26]
[ext_resource path="res://MeshToLoad/Stair/MeshStair (UP)(Z-).glb" type="PackedScene" id=27]
[ext_resource path="res://MeshToLoad/Stair/MeshStair (DOWN)(Z-).glb" type="PackedScene" id=28]
[ext_resource path="res://MeshToLoad/Stair/MeshStair (DOWN)(Z+).glb" type="PackedScene" id=29]
[ext_resource path="res://MeshToLoad/Stair/MeshStair (UP)(X-).glb" type="PackedScene" id=30]
[ext_resource path="res://MeshToLoad/Sprite/MeshSprite (Y-).glb" type="PackedScene" id=31]
[ext_resource path="res://MeshToLoad/Sprite/MeshSprite (Z-).glb" type="PackedScene" id=32]
[ext_resource path="res://MeshToLoad/Sprite/MeshSprite (X+).glb" type="PackedScene" id=33]
[ext_resource path="res://MeshToLoad/Sprite/MeshSprite (X-).glb" type="PackedScene" id=34]
[ext_resource path="res://MeshToLoad/Sprite/MeshSprite (Y+).glb" type="PackedScene" id=35]
[ext_resource path="res://MeshToLoad/Sprite/MeshSprite (Z+).glb" type="PackedScene" id=36]
[ext_resource path="res://MeshToLoad/WallSprite/MeshWallSprite (Z+).glb" type="PackedScene" id=37]
[ext_resource path="res://MeshToLoad/WallSprite/MeshWallSprite (X-).glb" type="PackedScene" id=38]
[ext_resource path="res://MeshToLoad/WallSprite/MeshWallSprite (X+).glb" type="PackedScene" id=39]
[ext_resource path="res://MeshToLoad/WallSprite/MeshWallSprite (Y+).glb" type="PackedScene" id=40]
[ext_resource path="res://MeshToLoad/WallSprite/MeshWallSprite (Y-).glb" type="PackedScene" id=41]
[ext_resource path="res://MeshToLoad/WallSprite/MeshWallSprite (Z-).glb" type="PackedScene" id=42]
[ext_resource path="res://prototype_512x512_grey3.png" type="Texture" id=43]

[sub_resource type="ProceduralSky" id=3]
sky_curve = 0.18
ground_bottom_color = Color( 0.956863, 0.980392, 1, 1 )
ground_horizon_color = Color( 0.839216, 0.917647, 0.980392, 1 )
ground_curve = 0.09

[sub_resource type="Environment" id=4]
background_mode = 2
background_sky = SubResource( 3 )
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_sky_contribution = 0.75

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 43 )
uv1_scale = Vector3( 0.5, 0.5, 0.5 )
uv1_triplanar = true

[sub_resource type="PlaneMesh" id=1]
material = SubResource( 2 )
size = Vector2( 100, 100 )

[node name="Main" type="Spatial"]
script = ExtResource( 7 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -1, 6.18172e-08, -6.18172e-08, 0, 0.707107, 0.707107, 8.74228e-08, 0.707107, -0.707107, 0, 0, 0 )
shadow_enabled = true

[node name="Ground" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )
mesh = SubResource( 1 )

[node name="MeshToInspect" type="Spatial" parent="."]

[node name="WallSprite" type="Position3D" parent="MeshToInspect"]

[node name="MeshWallSprite (X+)" parent="MeshToInspect/WallSprite" instance=ExtResource( 39 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10 )

[node name="MeshWallSprite (X-)" parent="MeshToInspect/WallSprite" instance=ExtResource( 38 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -10 )

[node name="MeshWallSprite (Y+)" parent="MeshToInspect/WallSprite" instance=ExtResource( 40 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -10 )

[node name="MeshWallSprite (Y-)" parent="MeshToInspect/WallSprite" instance=ExtResource( 41 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -10 )

[node name="MeshWallSprite (Z+)" parent="MeshToInspect/WallSprite" instance=ExtResource( 37 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, -10 )

[node name="MeshWallSprite (Z-)" parent="MeshToInspect/WallSprite" instance=ExtResource( 42 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -10 )

[node name="Sprite" type="Position3D" parent="MeshToInspect"]

[node name="MeshSprite (X+)" parent="MeshToInspect/Sprite" instance=ExtResource( 33 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8 )

[node name="MeshSprite (X-)" parent="MeshToInspect/Sprite" instance=ExtResource( 34 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -8 )

[node name="MeshSprite (Y+)" parent="MeshToInspect/Sprite" instance=ExtResource( 35 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -8 )

[node name="MeshSprite (Y-)" parent="MeshToInspect/Sprite" instance=ExtResource( 31 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -8 )

[node name="MeshSprite (Z+)" parent="MeshToInspect/Sprite" instance=ExtResource( 36 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, -8 )

[node name="MeshSprite (Z-)" parent="MeshToInspect/Sprite" instance=ExtResource( 32 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -8 )

[node name="Stair" type="Position3D" parent="MeshToInspect"]

[node name="MeshStair (UP)(X+)" parent="MeshToInspect/Stair" instance=ExtResource( 26 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6 )

[node name="MeshStair (UP)(X-)" parent="MeshToInspect/Stair" instance=ExtResource( 30 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -6 )

[node name="MeshStair (UP)(Z+)" parent="MeshToInspect/Stair" instance=ExtResource( 24 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, -6 )

[node name="MeshStair (UP)(Z-)" parent="MeshToInspect/Stair" instance=ExtResource( 27 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -6 )

[node name="MeshStair (DOWN)(X+)" parent="MeshToInspect/Stair" instance=ExtResource( 25 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -6 )

[node name="MeshStair (DOWN)(X-)" parent="MeshToInspect/Stair" instance=ExtResource( 23 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 2, -6 )

[node name="MeshStair (DOWN)(Z+)" parent="MeshToInspect/Stair" instance=ExtResource( 29 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 2, -6 )

[node name="MeshStair (DOWN)(Z-)" parent="MeshToInspect/Stair" instance=ExtResource( 28 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 2, -6 )

[node name="Pole" type="Position3D" parent="MeshToInspect"]

[node name="MeshPole (X)" parent="MeshToInspect/Pole" instance=ExtResource( 21 )]

[node name="MeshPole (Y)" parent="MeshToInspect/Pole" instance=ExtResource( 22 )]

[node name="MeshPole (Z)" parent="MeshToInspect/Pole" instance=ExtResource( 20 )]

[node name="Wall" type="Position3D" parent="MeshToInspect"]

[node name="MeshWall (X)" parent="MeshToInspect/Wall" instance=ExtResource( 19 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4 )

[node name="MeshWall (Y)" parent="MeshToInspect/Wall" instance=ExtResource( 18 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -4 )

[node name="MeshWall (Z)" parent="MeshToInspect/Wall" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, -4 )

[node name="Slab" type="Position3D" parent="MeshToInspect"]

[node name="MeshSlab (X+)" parent="MeshToInspect/Slab" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )

[node name="MeshSlab (X-)" parent="MeshToInspect/Slab" instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -2 )

[node name="MeshSlab (Y+)" parent="MeshToInspect/Slab" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -2 )

[node name="MeshSlab (Y-)" parent="MeshToInspect/Slab" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -2 )

[node name="MeshSlab (Z+)" parent="MeshToInspect/Slab" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, -2 )

[node name="MeshSlab (Z-)" parent="MeshToInspect/Slab" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -2 )

[node name="Cube" type="Position3D" parent="MeshToInspect"]

[node name="MeshCube (X+)" parent="MeshToInspect/Cube" instance=ExtResource( 6 )]

[node name="MeshCube (X-)" parent="MeshToInspect/Cube" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0 )

[node name="MeshCube (Y+)" parent="MeshToInspect/Cube" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0 )

[node name="MeshCube (Y-)" parent="MeshToInspect/Cube" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 0 )

[node name="MeshCube (Z+)" parent="MeshToInspect/Cube" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0 )

[node name="MeshCube (Z-)" parent="MeshToInspect/Cube" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 0 )

[node name="KinematicBody" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 5 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0

[node name="RightBottomPanel" type="Control" parent="UI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -544.0
margin_top = -264.0

[node name="Control" type="Control" parent="UI/RightBottomPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="FaceCreator" type="Panel" parent="UI/RightBottomPanel/Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -320.0
margin_top = -248.0

[node name="ScrollContainer" type="ScrollContainer" parent="UI/RightBottomPanel/Control/FaceCreator"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GridContainer" type="GridContainer" parent="UI/RightBottomPanel/Control/FaceCreator/ScrollContainer"]
margin_right = 320.0
size_flags_horizontal = 3
columns = 2

[node name="LabelBG" type="Panel" parent="UI/RightBottomPanel/Control/FaceCreator"]
margin_top = -16.0
margin_right = 88.0
margin_bottom = 1.0

[node name="Label" type="Label" parent="UI/RightBottomPanel/Control/FaceCreator"]
margin_top = -16.0
margin_right = 88.0
margin_bottom = 1.0
custom_fonts/font = ExtResource( 10 )
text = "SHOW FACES"
align = 1

[node name="MeshControl" type="Panel" parent="UI/RightBottomPanel/Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -544.0
margin_top = -232.0
margin_right = -332.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/RightBottomPanel/Control/MeshControl"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -204.0
margin_top = -264.0
margin_right = -8.0
margin_bottom = -8.0
custom_constants/separation = 8
alignment = 2

[node name="Label2" type="Label" parent="UI/RightBottomPanel/Control/MeshControl/VBoxContainer"]
margin_top = 34.0
margin_right = 196.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 10 )
text = "UV (MUST REDRAW) (PRESS X TO CONFIRM)"
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="UI/RightBottomPanel/Control/MeshControl/VBoxContainer"]
margin_top = 79.0
margin_right = 196.0
margin_bottom = 111.0
rect_min_size = Vector2( 0, 32 )

[node name="uvX" type="SpinBox" parent="UI/RightBottomPanel/Control/MeshControl/VBoxContainer/HBoxContainer"]
margin_right = 84.0
margin_bottom = 32.0
size_flags_horizontal = 3
max_value = 255.0
value = 4.0

[node name="uvY" type="SpinBox" parent="UI/RightBottomPanel/Control/MeshControl/VBoxContainer/HBoxContainer"]
margin_left = 88.0
margin_right = 172.0
margin_bottom = 32.0
size_flags_horizontal = 3
max_value = 255.0

[node name="Button" type="Button" parent="UI/RightBottomPanel/Control/MeshControl/VBoxContainer/HBoxContainer"]
margin_left = 176.0
margin_right = 196.0
margin_bottom = 32.0
focus_mode = 1
enabled_focus_mode = 1
text = "X"

[node name="Label" type="Label" parent="UI/RightBottomPanel/Control/MeshControl/VBoxContainer"]
margin_top = 119.0
margin_right = 196.0
margin_bottom = 136.0
custom_fonts/font = ExtResource( 10 )
text = "INFO TO COPY"
align = 1

[node name="CopyVerticesInfo" type="Button" parent="UI/RightBottomPanel/Control/MeshControl/VBoxContainer"]
margin_top = 144.0
margin_right = 196.0
margin_bottom = 176.0
rect_min_size = Vector2( 196, 32 )
focus_mode = 0
custom_fonts/font = ExtResource( 10 )
enabled_focus_mode = 0
text = "COPY VERTICES INFO"
align = 0

[node name="CopyUVSInfo" type="Button" parent="UI/RightBottomPanel/Control/MeshControl/VBoxContainer"]
margin_top = 184.0
margin_right = 196.0
margin_bottom = 216.0
rect_min_size = Vector2( 196, 32 )
focus_mode = 0
custom_fonts/font = ExtResource( 10 )
enabled_focus_mode = 0
text = "COPY UV INFO"
align = 0

[node name="CopyIndicesInfo" type="Button" parent="UI/RightBottomPanel/Control/MeshControl/VBoxContainer"]
margin_top = 224.0
margin_right = 196.0
margin_bottom = 256.0
rect_min_size = Vector2( 196, 32 )
focus_mode = 0
custom_fonts/font = ExtResource( 10 )
enabled_focus_mode = 0
text = "COPY INDICES INFO"
align = 0

[node name="RightPanel" type="Control" parent="UI"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -168.0
margin_bottom = 72.0

[node name="MeshSelection" type="Panel" parent="UI/RightPanel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -116.0
margin_bottom = 120.0

[node name="ScrollContainer" type="ScrollContainer" parent="UI/RightPanel/MeshSelection"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/RightPanel/MeshSelection/ScrollContainer"]
margin_right = 304.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="UI/RightPanel/MeshSelection"]
margin_top = -20.0
margin_right = 128.0
margin_bottom = 4.0

[node name="Label" type="Label" parent="UI/RightPanel/MeshSelection/Panel"]
margin_right = 128.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 10 )
text = "MESH TO DISPLAY"
align = 1

[node name="LeftPanel" type="Control" parent="UI"]
margin_right = 568.0
margin_bottom = 688.0

[node name="MeshInformation" type="Panel" parent="UI/LeftPanel"]
self_modulate = Color( 1, 1, 1, 0.784314 )
anchor_bottom = 1.0
margin_right = 360.0

[node name="ScrollContainer" type="ScrollContainer" parent="UI/LeftPanel/MeshInformation"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0

[node name="Label" type="Label" parent="UI/LeftPanel/MeshInformation/ScrollContainer"]
margin_right = 328.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 9 )

[node name="DisplayInfo" type="Panel" parent="UI/LeftPanel"]
self_modulate = Color( 1, 1, 1, 0.607843 )
margin_left = 368.0
margin_right = 564.0
margin_bottom = 256.0

[node name="Label" type="Label" parent="UI/LeftPanel/DisplayInfo"]
margin_right = 196.0
margin_bottom = 256.0
custom_fonts/font = ExtResource( 10 )
autowrap = true

[node name="Author" type="Label" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -320.0
margin_right = -168.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 10 )
text = "Made By MadByAd
(Aditya Wahyu Santoso)"
align = 1

[node name="ToggleLeftPanel" type="Button" parent="UI"]
margin_left = -12.0
margin_top = -12.0
margin_right = 12.0
margin_bottom = 12.0
rect_min_size = Vector2( 24, 24 )
focus_mode = 0
custom_fonts/font = ExtResource( 10 )
enabled_focus_mode = 0
text = "<"

[node name="ToggleRightPanel" type="Button" parent="UI"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -176.0
margin_right = 12.0
margin_bottom = -152.0
rect_min_size = Vector2( 24, 24 )
focus_mode = 0
custom_fonts/font = ExtResource( 10 )
enabled_focus_mode = 0
text = ">"

[node name="ToggleRightBottomPanel" type="Button" parent="UI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -12.0
margin_right = 12.0
margin_bottom = 12.0
rect_min_size = Vector2( 24, 24 )
focus_mode = 0
custom_fonts/font = ExtResource( 10 )
enabled_focus_mode = 0
text = ">"
